fix: update SEO title format and enhance HTML wrapping for lists in blog and project pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,16 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
   .text-container {
-  padding-left: 25%;
-  padding-right: 25%;
-}
+    padding-left: 25%;
+    padding-right: 25%;
+    list-style-position: inside;
+  }
+  .list-container {
+    padding-left: 5%;
+    padding-right: 0;
+    margin-left: 0;
+    list-style-position: inside;
+  }
 }
 .blendmode{
   mix-blend-mode: difference;
